:checkered_flag: - Attempt to fix form control header labels on IE11.

--- a/rijkshuisstijl/sass/components/form/_form-control.scss
+++ b/rijkshuisstijl/sass/components/form/_form-control.scss
@@ -35,6 +35,7 @@
   &__header .label {
     align-self: flex-start;
     box-sizing: border-box;
+    width: 10%;
   }
 
   &:not(#{&}--compact) &__header .label {
